# build-your-own-shell

./: Cargo.toml
src/: auto_completion.rs  command_handler.rs  history.rs  lexer.rs  main.rs  parse.rs  utils.rs
src/builtin_commands/: cd_command.rs  echo_command.rs  exit_command.rs  history_command.rs  mod.rs  prelude.rs  pwd_command.rs  type_command.rs
src/executor/: builtin_command_handler.rs  external_command_handler.rs  mod.rs  prelude.rs
