[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
is_executable = "1.0.5"
thiserror = "1.0.38"                             # error handling
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
rustyline = "17.0.2"
radix_trie = "0.3.0"
os_pipe = "1.1.0"
libc = "0.2.144"
nix = "0.30.0"